--- a/tictactoe/css/ttt.css
+++ b/tictactoe/css/ttt.css
@@ -56,20 +56,20 @@ ul {
 
 .grid > li.win {
   color: white;
-  background: url('https://i1.wp.com/www.toiletovhell.com/wp-content/uploads/2015/12/tumblr_ntl6adJeov1tpri36o1_400.gif?resize=390%2C259');
+  background: linear-gradient(to bottom, rgba(0, 255, 0, 0.3) 0%, rgba(0, 255, 0, 0.3) 100%), url('https://i1.wp.com/www.toiletovhell.com/wp-content/uploads/2015/12/tumblr_ntl6adJeov1tpri36o1_400.gif?resize=390%2C259');
   font-size: 600%;
   font-family: fantasy;
   font-weight: bold;
 }
 
 .grid > li.win:hover{
-  background: url('https://i1.wp.com/www.toiletovhell.com/wp-content/uploads/2015/12/tumblr_ntl6adJeov1tpri36o1_400.gif?resize=390%2C259');
-  background-position: 280px 250px; 
+  background: linear-gradient(to bottom, rgba(0, 255, 0, 0.3) 0%, rgba(0, 255, 0, 0.3) 100%), url('https://i1.wp.com/www.toiletovhell.com/wp-content/uploads/2015/12/tumblr_ntl6adJeov1tpri36o1_400.gif?resize=390%2C259');
+  background-position: 280px 250px;
 }
 
 .grid > li.loser {
   color: white;
-  background: url('https://img.buzzfeed.com/buzzfeed-static/static/2016-08/12/15/asset/buzzfeed-prod-web10/anigif_sub-buzz-22311-1471030600-2.gif');
+  background: linear-gradient(to bottom, rgba(255, 0, 0, .3) 0%, rgba(255, 0, 0, .3) 100%), url('https://img.buzzfeed.com/buzzfeed-static/static/2016-08/12/15/asset/buzzfeed-prod-web10/anigif_sub-buzz-22311-1471030600-2.gif');
   background-position: 150px 164px;
   font-size: 600%;
   font-family: fantasy;
@@ -77,5 +77,5 @@ ul {
 }
 
 .grid > li.loser:hover{
-  background: url('https://img.buzzfeed.com/buzzfeed-static/static/2016-08/12/15/asset/buzzfeed-prod-web10/anigif_sub-buzz-22311-1471030600-2.gif');
+  background: linear-gradient(to bottom, rgba(255, 0, 0, .3) 0%, rgba(255, 0, 0, .3) 100%), url('https://img.buzzfeed.com/buzzfeed-static/static/2016-08/12/15/asset/buzzfeed-prod-web10/anigif_sub-buzz-22311-1471030600-2.gif');
 }
